# llm-role-validator

./: README.md  pyproject.toml
src/llm_role_validator/: __init__.py  core.py
tests/: test_llm_role_validator.py
